# finance_tracker

./: .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE.txt  README.md  conanfile.txt  sonar-project.properties
.github/workflows/: cmake-multi-platform.yml
.sonarlint/: connectedMode.json
cmake/: find-conan-toolchain.cmake  generate-sonar-properties.cmake  versionize.cmake
conan-profiles/: conan-packages-installer.sh  conan-profile-x64-clang-debug.txt  conan-profile-x64-clang-release.txt  conan-profile-x64-gcc-debug.txt  conan-profile-x64-gcc-release.txt  conanfile.txt
core/: CMakeLists.txt
core/src/: Transaction.cpp  Transaction.ixx  TransactionMapper.cpp  TransactionMapper_impl.cpp  Transaction_impl.cpp  main.cpp
core/test/: CMakeLists.txt  test_transaction.cpp  test_transactionmapper.cpp
scripts/: run-coverage.sh
storage/: CMakeLists.txt
storage/src/: CSVImporter.cpp  CSVImporter.ixx  CSVImporter_impl.cpp  CSVReader.cpp  CSVReader_impl.cpp  Importer.cpp  Importer.ixx
storage/test/: CMakeLists.txt  test.csv  test_csvreader.cpp  test_importer.cpp  test_storage.cpp
test-data/: test-mapping-bad.json  test-mapping.json  test-no-header.csv  test-only-header.csv  test-single-record-comma.csv  test-single-record.csv  test.csv
utils/: CMakeLists.txt
utils/src/: Exceptions.cpp  uuid_utils.cpp  uuid_utils.cppm
utils/test/: CMakeLists.txt  test_utils.cpp
